# rust-wechaty

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: ding_dong_bot.rs
file-box/: Cargo.toml
file-box/src/: lib.rs
filebox/: Cargo.toml
filebox/src/: lib.rs
wechaty/: Cargo.toml
wechaty-puppet/: Cargo.toml
wechaty-puppet-mock/: Cargo.toml
wechaty-puppet-mock/src/: lib.rs  puppet_mock.rs
wechaty-puppet-service/: Cargo.toml
wechaty-puppet-service/src/: from_payload_response.rs  lib.rs  puppet_service.rs  service_endpoint.rs
wechaty-puppet/src/: error.rs  events.rs  lib.rs  puppet.rs  types.rs
wechaty-puppet/src/schemas/: contact.rs  event.rs  friendship.rs  image.rs  message.rs  mini_program.rs  mod.rs  payload.rs  puppet.rs  room.rs  room_invitation.rs  url_link.rs
wechaty/src/: context.rs  error.rs  lib.rs  payload.rs  wechaty.rs
wechaty/src/traits/: contact.rs  event_listener.rs  mod.rs  talkable.rs
wechaty/src/user/: contact.rs  contact_self.rs  entity.rs  favorite.rs  friendship.rs  image.rs  location.rs  message.rs  mini_program.rs  mod.rs  moment.rs  money.rs  room.rs  room_invitation.rs  tag.rs  url_link.rs
