[package]
name = "filebox"
version = "0.1.0-beta.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Unified file (local, remote url, or cloud storage) box for easy easier management and manipulation."
keywords = ["file", "cloud-storage", "wechaty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
