[package]
name = "wechaty-puppet-mock"
version = "0.1.0-beta.1"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust implementation of wechaty-puppet-mock"
keywords = ["chatbot", "wechaty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
async-trait = "0.1"
wechaty_puppet = "0.1.0-beta.1"