[package]
name = "wechaty-puppet-service"
version = "0.1.0-beta.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust implementation of wechaty-puppet-service"
keywords = ["chatbot", "wechaty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-rt = "2.0"
async-trait = "0.1"
log = "0.4"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.2"
tonic = "0.4"
uuid = { version = "0.8", features = ["v4"] }
wechaty_puppet = "0.1.0-beta.0"
wechaty-grpc = "0.1"